refactored to StorageUnit to use HashSet instead of HashMap for grocery storage